<resources>
    <string name="app_name" translatable="false">Gesture Assistant</string>
    <string name="divider_img_view_content_des" translatable="false">Divider view</string>
    <!--Quang cac key pref-->
    <string name="pref_height_window_key" translatable="false">height_window</string>
    <string name="pref_width_window_key" translatable="false">width_window</string>
    <string name="pref_color_key" translatable="false">color_pref</string>
    <string name="pref_opacity_key" translatable="false">opacity_pref</string>
    <string name="pref_hide_home_indicator_key" translatable="false">hide_home_indicator</string>
    <string name="pref_hide_right_indicator_key" translatable="false">hide_right_indicator</string>
    <string name="pref_hide_left_indicator_key" translatable="false">hide_left_indicator</string>
    <string name="pref_transparent_indicators_key" translatable="false">transparent_indicators</string>
    <string name="pref_gesture_action_key" translatable="false">gesture_action_pref</string>
    <string name="pref_gesture_and_action_key" translatable="false">gesture_and_action</string>
    <string name="pref_appearance_key" translatable="false">appearance_key</string>
    <string name="pref_size_key" translatable="false">size_key</string>
    <string name="pref_swipe_up_key" translatable="false">swipe_up</string>
    <string name="pref_left_swipe_key" translatable="false">left_swipe</string>
    <string name="pref_swipe_up_and_hold_key" translatable="false">swipe_up_and_hold</string>
    <string name="pref_left_swipe_and_hold_key" translatable="false">left_swipe_and_hold</string>
    <string name="pref_right_swipe_and_hold_key" translatable="false">right_swipe_and_hold</string>
    <string name="pref_hold_indicator_key" translatable="false">hold_indicator</string>
    <string name="pref_hold_right_indicator_key" translatable="false">hold_right_indicator</string>
    <string name="pref_double_click_right_indicator_key" translatable="false">double_click_right_indicator</string>
    <string name="pref_double_click_left_indicator_key" translatable="false">double_click_left_indicator</string>
    <string name="pref_double_click_home_indicator_key" translatable="false">double_click_home_indicator</string>
    <string name="pref_hold_left_indicator_key" translatable="false">hold_left_indicator</string>

    <!--Quang cac title pref-->
    <string name="height_width_title">Height and Width</string>
    <string name="pref_height_title">Height</string>
    <string name="pref_width_title">Width</string>
    <string name="pref_hide_home_indicator_title">Hide home indicator</string>
    <string name="pref_hide_right_indicator_title">Hide right indicator</string>
    <string name="pref_hide_left_indicator_title">Hide left indicator</string>
    <string name="pref_transparent_indicators_title">Transparent indicators</string>
    <string name="pref_appearance_title">Appearance</string>
    <string name="pref_size_title">Size</string>
    <string name="pref_gesture_and_action_title">Gesture and action</string>
    <!--Quang cac category pref-->
    <string name="pref_color_and_visibility_category">Color and visibility</string>
    <!--Quang cac summary pref -->
    <string name="pref_color_summary">Color and opacity of the indicators</string>
    <string name="pref_hide_home_indicator_summary">Hide home indicator permanently</string>
    <string name="pref_hide_right_indicator_summary">Hide right indicator permanently</string>
    <string name="pref_hide_left_indicator_summary">Hide left indicator permanently</string>
    <string name="pref_transparent_indicators_summary">Transparent indicators permanently</string>
    <string name="pref_basic_gesture_title">Basic gesture</string>
    <!--Quang danh sach cac action-->
    <string name="action_gesture_nothing">Nothing</string>
    <string name="action_gesture_home">Home</string>
    <string name="action_gesture_back">Back</string>
    <string name="action_gesture_recent">Open recent app</string>
    <string name="action_gesture_notification">Open notification</string>
    <string name="action_gesture_quick_settings">Open quick settings</string>
    <string name="action_gesture_take_screen_shot">Take screenshot</string>
    <string name="action_gesture_split_screen">Split screen</string>
    <string name="action_gesture_screen_off">Screen off</string>
    <string name="action_gesture_flash_light">Turn on flashlight</string>
    <string name="action_control_brightness">Control brightness</string>
    <string name="action_control_sound">Control sound</string>
    <string name="pref_left_swipe_title">Left swipe</string>
    <string name="pref_gesture_action_summary">Click to configure an action</string>
    <string name="pref_right_swipe_title">Right swipe</string>
    <string name="pref_right_swipe_key" translatable="false">right_swipe</string>
    <string name="pref_swipe_up_title">Swipe up</string>
    <string name="pref_hold_gesture_category">Hold gestures</string>
    <string name="pref_swipe_up_and_hold_title">Swipe up and hold</string>
    <string name="pref_left_swipe_and_hold">Left swipe and hold</string>
    <string name="pref_right_swipe_and_hold_title">Right swipe and hold</string>
    <string name="pref_click_gesture_title">Click gestures</string>
    <string name="pref_home_indicator_title">Home indicator</string>
    <string name="pref_hold_home_indicator_title">Hold home indicator</string>
    <string name="pref_left_indicator_title">Left indicator</string>
    <string name="pref_right_indicator_title">Right indicator</string>
    <string name="pref_hold_right_indicator_title">Hold right indicator</string>
    <string name="pref_hold_left_indicator_title">Hold left indicator</string>
    <string name="pref_double_click_right_indicator_title">Double click right indicator</string>
    <string name="pref_double_click_left_indicator_title">Double click left indicator</string>
    <string name="pref_double_click_home_indicator_title">Double click home indicator</string>
    <string name="support_android_6" translatable="false">Support android 6.0 and high</string>
    <string name="device_admin" translatable="false">Device admin</string>
    <string name="device_admin_description" translatable="false">device admin description</string>
</resources>
