<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/ic_touch_app_black_24dp"
    android:key="@string/pref_gesture_and_action_key"
    android:title="@string/pref_gesture_and_action_title"
>
    <PreferenceCategory
        android:title="@string/pref_home_indicator_title"
    >
        <Preference
            android:defaultValue="1"
            android:icon="@drawable/ic_arrow_upward_black_24dp"
            android:key="@string/pref_swipe_up_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_swipe_up_title"
        />
        <Preference
            android:defaultValue="0"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:key="@string/pref_hold_indicator_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_hold_home_indicator_title"
        />
        <Preference
            android:defaultValue="0"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:key="@string/pref_double_click_home_indicator_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_double_click_home_indicator_title"
        />
        <Preference
            android:defaultValue="3"
            android:icon="@drawable/ic_swipe_up_hold_black_24dp"
            android:key="@string/pref_swipe_up_and_hold_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_swipe_up_and_hold_title"
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_right_indicator_title"
    >
        <Preference
            android:defaultValue="2"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:key="@string/pref_left_swipe_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_left_swipe_title"
        />
        <Preference
            android:defaultValue="0"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:key="@string/pref_hold_right_indicator_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_hold_right_indicator_title"
        />
        <Preference
            android:defaultValue="5"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:key="@string/pref_double_click_right_indicator_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_double_click_right_indicator_title"
        />
        <Preference
            android:defaultValue="0"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:key="@string/pref_left_swipe_and_hold_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_left_swipe_and_hold"
        />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_left_indicator_title"
    >
        <Preference
            android:defaultValue="1"
            android:icon="@drawable/ic_arrow_forward_black_24dp"
            android:key="@string/pref_right_swipe_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_right_swipe_title"
        />
        <Preference
            android:defaultValue="0"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:key="@string/pref_hold_left_indicator_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_hold_left_indicator_title"
        />
        <Preference
            android:defaultValue="6"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:key="@string/pref_double_click_left_indicator_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_double_click_left_indicator_title"
        />
        <Preference
            android:defaultValue="6"
            android:icon="@drawable/ic_right_swipe_hold_black_24dp"
            android:key="@string/pref_right_swipe_and_hold_key"
            android:summary="@string/pref_gesture_action_summary"
            android:title="@string/pref_right_swipe_and_hold_title"
        />
    </PreferenceCategory>

</PreferenceScreen>