<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="key_root"
>
    <android.support.v7.preference.PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:icon="@drawable/ic_touch_app_black_24dp"
        android:key="@string/pref_gesture_and_action_key"
        android:title="@string/pref_gesture_and_action_title"
    >
        <PreferenceCategory
            android:title="@string/pref_home_indicator_title"
        >
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="1"
                android:icon="@drawable/ic_arrow_upward_black_24dp"
                android:key="@string/pref_swipe_up_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_swipe_up_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="0"
                android:icon="@drawable/ic_touch_app_black_24dp"
                android:key="@string/pref_hold_indicator_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_hold_home_indicator_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="0"
                android:icon="@drawable/ic_touch_app_black_24dp"
                android:key="@string/pref_double_click_home_indicator_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_double_click_home_indicator_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="3"
                android:icon="@drawable/ic_swipe_up_hold_black_24dp"
                android:key="@string/pref_swipe_up_and_hold_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_swipe_up_and_hold_title"
            />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/pref_right_indicator_title"
        >
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="2"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:key="@string/pref_left_swipe_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_left_swipe_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="0"
                android:icon="@drawable/ic_touch_app_black_24dp"
                android:key="@string/pref_hold_right_indicator_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_hold_right_indicator_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="4"
                android:icon="@drawable/ic_touch_app_black_24dp"
                android:key="@string/pref_double_click_right_indicator_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_double_click_right_indicator_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="0"
                android:icon="@drawable/ic_arrow_back_black_24dp"
                android:key="@string/pref_left_swipe_and_hold_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_left_swipe_and_hold"
            />

        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/pref_left_indicator_title"
        >
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="2"
                android:icon="@drawable/ic_arrow_forward_black_24dp"
                android:key="@string/pref_right_swipe_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_right_swipe_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="0"
                android:icon="@drawable/ic_touch_app_black_24dp"
                android:key="@string/pref_hold_left_indicator_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_hold_left_indicator_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="5"
                android:icon="@drawable/ic_touch_app_black_24dp"
                android:key="@string/pref_double_click_left_indicator_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_double_click_left_indicator_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.GestureActionPreference
                android:defaultValue="5"
                android:icon="@drawable/ic_right_swipe_hold_black_24dp"
                android:key="@string/pref_right_swipe_and_hold_key"
                android:summary="@string/pref_gesture_action_summary"
                android:title="@string/pref_right_swipe_and_hold_title"
            />
        </PreferenceCategory>
    </android.support.v7.preference.PreferenceScreen>

    <android.support.v7.preference.PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="@string/pref_appearance_key"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:persistent="false"
        android:title="@string/pref_appearance_title"
    >
        <PreferenceCategory
            android:title="@string/pref_color_and_visibility_category">
            <SwitchPreference
                android:defaultValue="false"
                android:icon="@drawable/ic_visibility_off_black_24dp"
                android:key="@string/pref_hide_home_indicator_key"
                android:summary="@string/pref_hide_home_indicator_summary"
                android:title="@string/pref_hide_home_indicator_title"
            />
            <SwitchPreference
                android:defaultValue="false"
                android:icon="@drawable/ic_visibility_off_black_24dp"
                android:key="@string/pref_hide_right_indicator_key"
                android:summary="@string/pref_hide_right_indicator_summary"
                android:title="@string/pref_hide_right_indicator_title"
            />
            <SwitchPreference
                android:defaultValue="false"
                android:icon="@drawable/ic_visibility_off_black_24dp"
                android:key="@string/pref_hide_left_indicator_key"
                android:summary="@string/pref_hide_left_indicator_summary"
                android:title="@string/pref_hide_left_indicator_title"
            />
            <SwitchPreference
                android:defaultValue="false"
                android:icon="@drawable/ic_transparent_black_24dp"
                android:key="@string/pref_transparent_indicators_key"
                android:summary="@string/pref_transparent_indicators_summary"
                android:title="@string/pref_transparent_indicators_title"
            />
            <com.example.thinh.gesturecontroller.ui.prefs.custom_pref.ColorPreference
                android:defaultValue="@color/colorPrimaryAlternate"
                android:icon="@drawable/ic_color_lens_black_24dp"
                android:key="@string/pref_color_key"
                android:summary="Color and opacity of the indicators"
                android:title="Color and opacity"
                app:colorChoices="@array/default_color_choice_values"
            />
        </PreferenceCategory>
    </android.support.v7.preference.PreferenceScreen>
    <android.support.v7.preference.PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:key="@string/pref_size_key"
        android:icon="@drawable/ic_open_with_black_24dp"
        android:title="@string/pref_size_title"
        tools:ignore="MissingDefaultResource"
    >
        <android.support.v7.preference.PreferenceCategory
            android:title="@string/height_width_title">
            <android.support.v7.preference.SeekBarPreference
                android:defaultValue="25"
                android:icon="@drawable/ic_swap_vert_black_24dp"
                android:key="@string/pref_height_window_key"
                android:max="100"
                android:title="@string/pref_height_title"
            />
            <android.support.v7.preference.SeekBarPreference
                android:defaultValue="25"
                android:icon="@drawable/ic_swap_horiz_black_24dp"
                android:key="@string/pref_width_window_key"
                android:max="100"
                android:title="@string/pref_width_title"
            />
        </android.support.v7.preference.PreferenceCategory>
    </android.support.v7.preference.PreferenceScreen>
</android.support.v7.preference.PreferenceScreen>