<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">
    <android.support.v7.preference.PreferenceCategory
        android:title="@string/height_width_title">
        <android.support.v7.preference.SeekBarPreference
            android:defaultValue="25"
            android:icon="@drawable/ic_swap_vert_black_24dp"
            android:key="@string/pref_height_window_key"
            android:max="100"
            android:title="@string/pref_height_title"
        />
        <android.support.v7.preference.SeekBarPreference
            android:defaultValue="25"
            android:icon="@drawable/ic_swap_horiz_black_24dp"
            android:key="@string/pref_width_window_key"
            android:max="100"
            android:title="@string/pref_width_title"
        />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>